Fixed sonarLint